<resources>
    <string name="app_name">МАИ</string>
    <!-- navigation menu -->
    <string name="menu_schedule">Расписание пар</string>
    <string name="exam_schedule">Расписание сессии</string>
    <string name="menu_library">Библиотека</string>
    <string name="menu_campus">Кампус</string>
    <string name="menu_press_center">Пресс-центр</string>
    <string name="menu_life">Жизнь</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_title">Menu</string>
    <!-- -->
    <string name="user_settings">Настройки</string>
    <string name="about">О программе</string>
    <string name="go_to_MAI">Перейти на сайт МАИ</string>

    <string name="title_activity_settings">Настройки</string>
    <!-- Settings -->
    <string name="pref_group">Группа</string>
    <string name="pref_links">Просмотр ссылок</string>
    <string name="pref_theme">Оформление</string>
    <string name="pref_group_summary">Выберите группу</string>
    <string name="clear_cache_sub">Очистить кэш расписания пар</string>
    <string name="clear_cache_ex">Очистить кэш расписания экзаменов</string>
    <string name="freg_cache">Обновление кэша расписания пар</string>
    <string name="freg_cache_exams">Обновление кэша расписания экзаменов</string>
    <string name="title_app">Неофициальное приложение МАИ</string>
    <string name="title_summary">Версия 0.9.0-beta Сборка от 18.10.2020</string>
    <string name="site_mai">Перейти на сайт МАИ</string>

    <string-array name="freg_array">
        <item>Каждый день</item>
        <item>Каждую неделю</item>
        <item>Только принудительно</item>
    </string-array>

    <string-array name="freg_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="link_array">
        <item>Через приложение</item>
        <item>Через браузер</item>
    </string-array>
    <string-array name="link_values">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="themes_array">
        <item>Светлое</item>
        <item>Тёмное</item>
        <item>Тема системы</item>
    </string-array>
    <string-array name="themes_values">
        <item>1</item>
        <item>2</item>
        <item>-1</item>
    </string-array>
    <!-- Settings Cathegories -->
    <string name="common_cath">Общие</string>
    <string name="cache_cath">Кэш</string>
    <string name="about_cath">О программе</string>

    <string name="choose_week_space">Текущая неделя (кэш)</string>
    <string-array name="spinner_items">
        <item>Текущая неделя (кэш)</item>
        <item>1 неделя</item>
        <item>2 неделя</item>
        <item>3 неделя</item>
        <item>4 неделя</item>
        <item>5 неделя</item>
        <item>6 неделя</item>
        <item>7 неделя</item>
        <item>8 неделя</item>
        <item>9 неделя</item>
        <item>10 неделя</item>
        <item>11 неделя</item>
        <item>12 неделя</item>
        <item>13 неделя</item>
        <item>14 неделя</item>
        <item>15 неделя</item>
        <item>16 неделя</item>
    </string-array>
    <string name="choose_group_button">НАСТРОИТЬ</string>
    <string name="choose_group_space">Группа не выбрана</string>
    <string name="choose_faculty_space">Факультет не выбран</string>
    <string name="choose_course_space">Курс не выбран</string>
    <string-array name="spinner_items_two">
        <item>1 неделя</item>
        <item>2 неделя</item>
        <item>3 неделя</item>
        <item>4 неделя</item>
        <item>5 неделя</item>
        <item>6 неделя</item>
        <item>7 неделя</item>
        <item>8 неделя</item>
        <item>9 неделя</item>
        <item>10 неделя</item>
        <item>11 неделя</item>
        <item>12 неделя</item>
        <item>13 неделя</item>
        <item>14 неделя</item>
        <item>15 неделя</item>
        <item>16 неделя</item>
    </string-array>
    <string name="choose_group_activity_title">Выбор группы</string>
    <string name="spinner_fac_title">Выберите факультет</string>
    <string name="spinner_stage_title">Выберите курс</string>
    <string-array name="spinner_facs">
        <item>Выберите факультет</item>
        <item>Институт №1</item>
        <item>Институт №2</item>
        <item>Институт №3</item>
        <item>Институт №4</item>
        <item>Институт №5</item>
        <item>Институт №6</item>
        <item>Институт №7</item>
        <item>Институт №8</item>
        <item>Институт №9</item>
        <item>Институт №10</item>
        <item>Институт №11</item>
        <item>Институт №12</item>
    </string-array>
    <string-array name="spinner_stages">
        <item>Выберите курс</item>
        <item>1 курс</item>
        <item>2 курс</item>
        <item>3 курс</item>
        <item>4 курс</item>
        <item>5 курс</item>
        <item>6 курс</item>
    </string-array>
    <string name="choose_group_accept">ГОТОВО</string>
    <string name="share_link_hint">Поделиться</string>
    <string name="browser_link_hint">Посмотреть на сайте</string>
    <string name="share_exam_link">Поделиться расписанием экзаменов</string>
    <string name="share_subjects_link">Поделиться расписанием пар</string>
    <string name="share_news_link">Поделиться новостью</string>
    <string name="exception_group_null">Сначала выберите группу</string>
    <string name="go_button">Далее</string>
    <!-- Settings Toasts-->
    <string name="clear_cache_subj_toast">Кеш раписания пар очищен</string>
    <string name="clear_cache_exams_toast">Кеш раписания экзаменов очищен</string>
    <string name="author">Автор: Никита Карпунин</string>
    <!-- PlaceHolder for NewsActivity -->
    <string name="place_holder">&#8230;</string>

    <string name="cache_updated_message">Кэш обновлён</string>
    <string name="day_pref">День</string>
    <string name="week_pref">Неделя</string>
    <string name="error">"Не удалось загрузить данные. Либо на сайте нет ничего по этому запросу, либо ваше устройство не подключено к сети."</string>
</resources>