<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/common_cath">
        <Preference
            android:key="pref_group"
            android:title="@string/pref_group"
            android:summary="@string/pref_group_summary">
        </Preference>
        <ListPreference
            android:title="@string/pref_links"
            android:key="links"
            android:defaultValue="1"
            android:summary="%s"
            android:entries="@array/link_array"
            android:entryValues="@array/link_values">
        </ListPreference>
        <ListPreference
            android:title="@string/pref_language"
            android:key="lang"
            android:defaultValue="1"
            android:summary="%s"
            android:entries="@array/lang_array"
            android:entryValues="@array/lang_values">
        </ListPreference>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/cache_cath">
        <Preference
            android:key="clear_cache_subj"
            android:title="@string/clear_cache_sub">
        </Preference>
        <Preference
            android:key="clear_cache_ex"
            android:title="@string/clear_cache_ex">
        </Preference>
        <ListPreference
            android:title="@string/freg_cache"
            android:key="freg"
            android:defaultValue="1"
            android:summary="%s"
            android:entries="@array/freg_array"
            android:entryValues="@array/freg_values">
        </ListPreference>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/about_cath">
        <Preference
            android:key="about"
            android:title="@string/title_app"
            android:summary="@string/title_summary">
        </Preference>
        <Preference
            android:title="@string/site_dev">
        </Preference>
        <Preference
            android:key="go_mai"
            android:title="@string/site_mai">
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>