<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundSplash"
    tools:context=".choose_groups.NewChooseGroupActivity">

    <FrameLayout
        android:id="@+id/chooseGroupToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/backgroundSplash"
        android:elevation="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/choose_group_activity_title"
            android:textColor="@color/colorTextSecondary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/readyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/choose_group_accept"
            android:textColor="@color/colorTextSecondary"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="gone" />

    </FrameLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/chooseGroupSRL"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottomDataCard"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chooseGroupToolbar">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/groupsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </android.support.v4.widget.SwipeRefreshLayout>

    <FrameLayout
        android:id="@+id/bottomDataCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_data_card"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/chooseFacultyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_margin="16dp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/choose_faculty_space"
            android:textColor="@color/mainTextColor"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/chooseCourseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_margin="16dp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/choose_course_space"
            android:textColor="@color/mainTextColor"
            android:textSize="16sp"
            android:textStyle="bold" />

    </FrameLayout>

</android.support.constraint.ConstraintLayout>